# mygeno

./: .gitignore
.github/: release-drafter-pubmed_mcp.yml
.github/workflows/: pubmed_mcp-ci.yml  pubmed_mcp-release-drafter.yml  pubmed_mcp-release.yml
data/pdf/: PMID:33374015.expected.json  PMID:34426522.expected.json
mcp/pubmed_parser/: README.md  requirements.txt  server.py
mcp/pubmed_parser/pubmed_client/: __init__.py  cli.py  constants.py  extractors.py  network.py  pdf.py  summarizer.py  variants.py  xml_parser.py
mcp/pubmed_parser/tests/: conftest.py  test_expected_output.py  test_extractors.py  test_integration.py  test_pdf.py  test_pdf_parser.py  test_variants.py
pubmed_mcp/: .dockerignore  .env.example  Cargo.toml  Dockerfile  PLAN.md  README.md  docker-compose.yml
pubmed_mcp/migrations/: 0001_init.sql
pubmed_mcp/src/: config.rs  db.rs  findit.rs  http_client.rs  main.rs  pipeline.rs  pmc.rs  pubmed.rs  scihub.rs  server.rs  storage.rs
pubmed_server/: Dockerfile  README.md  app.py  requirements.txt
skills/pubmed-extractor/: SKILL.md  mfsd8_full_results.json  pubmed_MOCS1_c1064T_C_results.json  skill.md.bak.20260421
skills/pubmed-extractor/scripts/: .site_counts_2026-04-24.json  .site_counts_2026-04-28.json  .site_counts_2026-04-29.json  .site_counts_2026-05-06.json  .site_counts_2026-05-07.json  .site_counts_2026-05-17.json  .site_counts_2026-05-18.json  .site_counts_2026-05-19.json  pdf_variant_search.py  (+9 more)
skills/sci-extractor/: SKILL.md  skill.md.bak.20260421
skills/scihub-downloader/: SKILL.md
skills/scihub-pubmed-pipeline/: skill.md
(+9 files in other folders)
