[package]
name = "pmid_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "1.7", features = [
    "server",
    "macros",
    "schemars",
    "transport-streamable-http-server",
] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
axum = "0.7"

reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "cookies",
    "json",
    "stream",
] }
scraper = "0.20"
regex = "1"
url = "2"

aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-smithy-types = "1"

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "migrate",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

sha2 = "0.10"
hex = "0.4"
rand = "0.8"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

anyhow = "1"
thiserror = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
